--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 @media screen and (min-width : 900px) {
 	div.App {
-		text-size : 2em;
+		font-size : 2em;
 	}
 
 	textarea {
 		font-size : 1em;
 		min-width : 600px;
-
 	}
 
 	.pd_container {
